update pages with new sgds prefixes

--- a/404.html
+++ b/404.html
@@ -5,8 +5,8 @@ layout: layout-default
 <section class="sgds-section">
 
 <div class="sgds-container">
-  <div class="row">
-    <div class="col is-half is-offset-one-quarter">
+  <div class="sgds-row">
+    <div class="sgds-col is-half is-offset-one-quarter">
       <div class="content has-text-centered">
         <h1>404</h1>
         <p>The requested page could not be found.</p>
