--- a/collections/_form/general-guidelines.html
+++ b/collections/_form/general-guidelines.html
@@ -56,44 +56,44 @@ order: 1
 </p>
 
 {% capture form_example %}
-<div class="row">
-  <div class="col is-8">
+<div class="sgds-row">
+  <div class="sgds-col is-8">
     <form>
-      <div class="field">
-        <label class="label" for="name">Name</label>
-        <div class="control">
-          <input class="input" type="text" id="name" />
+      <div class="sgds-field">
+        <label class="sgds-label" for="name">Name</label>
+        <div class="sgds-control">
+          <input class="sgds-input" type="text" id="name" />
         </div>
       </div>
-      <div class="field">
-        <label class="label" for="username">Username</label>
-        <div class="control">
+      <div class="sgds-field">
+        <label class="sgds-label" for="username">Username</label>
+        <div class="sgds-control">
           <input
-            class="input is-success"
+            class="sgds-input is-success"
             type="text"
             value="Username"
             id="username"
           />
         </div>
-        <p class="help is-success">This username is available</p>
+        <p class="sgds-help is-success">This username is available</p>
       </div>
-      <div class="field">
-        <label class="label" for="email">Email</label>
-        <div class="control">
+      <div class="sgds-field">
+        <label class="sgds-label" for="email">Email</label>
+        <div class="sgds-control">
           <input
-            class="input is-danger"
+            class="sgds-input is-danger"
             type="email"
             placeholder="Email input"
             value="hello@example.com"
             id="email"
           />
         </div>
-        <p class="help is-danger">This email is invalid</p>
+        <p class="sgds-help is-danger">This email is invalid</p>
       </div>
-      <div class="field">
-        <label class="label" for="select-example">Subject</label>
-        <div class="control">
-          <div class="select" id="select-example">
+      <div class="sgds-field">
+        <label class="sgds-label" for="select-example">Subject</label>
+        <div class="sgds-control">
+          <div class="sgds-select" id="select-example">
             <select>
               <option>Select dropdown</option>
               <option>With options</option>
@@ -101,52 +101,52 @@ order: 1
           </div>
         </div>
       </div>
-      <label class="label">Category</label>
-      <div class="field has-addons">
-        <div class="control">
-          <input class="input" type="text" />
+      <label class="sgds-label">Category</label>
+      <div class="sgds-field has-addons">
+        <div class="sgds-control">
+          <input class="sgds-input" type="text" />
         </div>
-        <div class="control">
+        <div class="sgds-control">
           <a class="sgds-button is-info">
             Search
           </a>
         </div>
       </div>
-      <div class="field">
-        <label class="label" for="message">Message</label>
-        <div class="control">
+      <div class="sgds-field">
+        <label class="sgds-label" for="message">Message</label>
+        <div class="sgds-control">
           <textarea
-            class="textarea"
+            class="sgds-textarea"
             placeholder="Textarea"
             id="message"
           ></textarea>
         </div>
       </div>
-      <div class="field">
-        <div class="control">
-          <label class="checkbox">
+      <div class="sgds-field">
+        <div class="sgds-control">
+          <label class="sgds-checkbox">
             <input type="checkbox" />
             I agree to the <a href="#">terms and conditions</a>
           </label>
         </div>
       </div>
-      <div class="field">
-        <div class="control">
-          <label class="radio">
+      <div class="sgds-field">
+        <div class="sgds-control">
+          <label class="sgds-radio">
             <input type="radio" name="question" />
             Yes
           </label>
-          <label class="radio">
+          <label class="sgds-radio">
             <input type="radio" name="question" />
             No
           </label>
         </div>
       </div>
-      <div class="field is-grouped">
-        <div class="control">
+      <div class="sgds-field is-grouped">
+        <div class="sgds-control">
           <button class="sgds-button is-link">Submit</button>
         </div>
-        <div class="control">
+        <div class="sgds-control">
           <button class="sgds-button is-text">Cancel</button>
         </div>
       </div>
