--- a/collections/_form/radio-buttons.html
+++ b/collections/_form/radio-buttons.html
@@ -22,13 +22,13 @@ order: 3
 <h4>1) Default Radio Buttons</h4>
 
 <div class="sgds-example-others">
-  <div class="field">
-    <div class="control">
-      <label class="radio">
+  <div class="sgds-field">
+    <div class="sgds-control">
+      <label class="sgds-radio">
         <input type="radio" name="accept" />
         Yes
       </label>
-      <label class="radio">
+      <label class="sgds-radio">
         <input type="radio" name="accept" />
         No
       </label>
@@ -37,13 +37,13 @@ order: 3
 </div>
 
 {%- highlight html -%}
-<div class="field">
-  <div class="control">
-    <label class="radio">
+<div class="sgds-field">
+  <div class="sgds-control">
+    <label class="sgds-radio">
       <input type="radio" name="accept" />
       Yes
     </label>
-    <label class="radio">
+    <label class="sgds-radio">
       <input type="radio" name="accept" />
       No
     </label>
@@ -73,15 +73,15 @@ order: 3
 </p>
 
 <div class="sgds-example-others">
-  <div class="field">
-    <div class="control">
-      <label class="radio">
+  <div class="sgds-field">
+    <div class="sgds-control">
+      <label class="sgds-radio">
         <input type="radio" name="choice" />
         Yes
       </label>
     </div>
-    <div class="control">
-      <label class="radio">
+    <div class="sgds-control">
+      <label class="sgds-radio">
         <input type="radio" name="choice" />
         No
       </label>
@@ -90,15 +90,15 @@ order: 3
 </div>
 
 {%- highlight html -%}
-<div class="field">
-  <div class="control">
-    <label class="radio">
+<div class="sgds-field">
+  <div class="sgds-control">
+    <label class="sgds-radio">
       <input type="radio" name="choice" />
       Yes
     </label>
   </div>
-  <div class="control">
-    <label class="radio">
+  <div class="sgds-control">
+    <label class="sgds-radio">
       <input type="radio" name="choice" />
       No
     </label>
