--- a/collections/_form/text-area.html
+++ b/collections/_form/text-area.html
@@ -14,33 +14,33 @@ order: 4
 <h3>Default text area</h3>
 <p>You can also choose to include a label for your Text Area.</p>
 <div class="sgds-example-others">
-  <div class="field">
-    <label class="label" for="textarea-1">Text Area Label</label>
-    <div class="control">
-      <textarea class="textarea" id="textarea-1"></textarea>
+  <div class="sgds-field">
+    <label class="sgds-label" for="textarea-1">Text Area Label</label>
+    <div class="sgds-control">
+      <textarea class="sgds-textarea" id="textarea-1"></textarea>
     </div>
   </div>
-  <div class="field">
-    <label class="label" for="textarea-2">Text Area Label</label>
-    <span class="hint">This is a example of hint text</span>
-    <div class="control">
-      <textarea class="textarea" id="textarea-2"></textarea>
+  <div class="sgds-field">
+    <label class="sgds-label" for="textarea-2">Text Area Label</label>
+    <span class="sgds-hint">This is a example of hint text</span>
+    <div class="sgds-control">
+      <textarea class="sgds-textarea" id="textarea-2"></textarea>
     </div>
   </div>
 </div>
 {%- highlight html -%}
-<div class="field">
-  <label class="label" for="textarea-1">Text Area Label</label>
-  <div class="control">
-    <textarea class="textarea" id="textarea-1"></textarea>
+<div class="sgds-field">
+  <label class="sgds-label" for="textarea-1">Text Area Label</label>
+  <div class="sgds-control">
+    <textarea class="sgds-textarea" id="textarea-1"></textarea>
   </div>
 </div>
 
-<div class="field">
-  <label class="label" for="textarea-2">Text Area Label</label>
-  <span class="hint">This is a example of hint text</span>
-  <div class="control">
-    <textarea class="textarea" id="textarea-2"></textarea>
+<div class="sgds-field">
+  <label class="sgds-label" for="textarea-2">Text Area Label</label>
+  <span class="sgds-hint">This is a example of hint text</span>
+  <div class="sgds-control">
+    <textarea class="sgds-textarea" id="textarea-2"></textarea>
   </div>
 </div>
 {%- endhighlight -%}
