--- a/collections/_form/text-input.html
+++ b/collections/_form/text-input.html
@@ -16,35 +16,35 @@ order: 5
 <h4>1) Default text input</h4>
 
 <div class="sgds-example-others">
-  <div class="field">
-    <label class="label" for=input-1">Text Input Label</label>
-    <div class="control">
-      <input class="input" type="text" id=input-1" />
+  <div class="sgds-field">
+    <label class="sgds-label" for=input-1">Text Input Label</label>
+    <div class="sgds-control">
+      <input class="sgds-input" type="text" id=input-1" />
     </div>
   </div>
 
-  <div class="field">
-    <label class="label" for=input-2">Text Input Label</label>
-    <span class="hint">This is a example of hint text</span>
-    <div class="control">
-      <input class="input" type="text" id=input-2" />
+  <div class="sgds-field">
+    <label class="sgds-label" for=input-2">Text Input Label</label>
+    <span class="sgds-hint">This is a example of hint text</span>
+    <div class="sgds-control">
+      <input class="sgds-input" type="text" id=input-2" />
     </div>
   </div>
 </div>
 
 {%- highlight html -%}
-<div class="field">
-  <label class="label" for=input-1">Text Input Label</label>
-  <div class="control">
-    <input class="input" type="text" id=input-1" />
+<div class="sgds-field">
+  <label class="sgds-label" for=input-1">Text Input Label</label>
+  <div class="sgds-control">
+    <input class="sgds-input" type="text" id=input-1" />
   </div>
 </div>
 
-<div class="field">
-  <label class="label" for=input-2">Text Input Label</label>
-  <span class="hint">This is a example of hint text</span>
-  <div class="control">
-    <input class="input" type="text" id=input-2" />
+<div class="sgds-field">
+  <label class="sgds-label" for=input-2">Text Input Label</label>
+  <span class="sgds-hint">This is a example of hint text</span>
+  <div class="sgds-control">
+    <input class="sgds-input" type="text" id=input-2" />
   </div>
 </div>
 {%- endhighlight -%}
@@ -70,13 +70,13 @@ order: 5
 </p>
 
 <div class="sgds-example-others">
-  <div class="field">
-    <label class="label" for=input-3">Email Address</label>
-    <span class="hint">This is a example of hint text</span>
-    <span class="help is-danger">This email is invalid</span>
-    <div class="control">
+  <div class="sgds-field">
+    <label class="sgds-label" for=input-3">Email Address</label>
+    <span class="sgds-hint">This is a example of hint text</span>
+    <span class="sgds-help is-danger">This email is invalid</span>
+    <div class="sgds-control">
       <input
-        class="input is-danger"
+        class="sgds-input is-danger"
         type="email"
         placeholder="Email Address"
         value="hello_example.com"
@@ -88,13 +88,13 @@ order: 5
 </div>
 
 {%- highlight html -%}
-<div class="field">
-  <label class="label" for=input-3">Email Address</label>
-  <span class="hint">This is a example of hint text</span>
-  <span class="help is-danger">This email is invalid</span>
-  <div class="control">
+<div class="sgds-field">
+  <label class="sgds-label" for=input-3">Email Address</label>
+  <span class="sgds-hint">This is a example of hint text</span>
+  <span class="sgds-help is-danger">This email is invalid</span>
+  <div class="sgds-control">
     <input
-      class="input is-danger"
+      class="sgds-input is-danger"
       type="email"
       placeholder="Email Address"
       value="hello_example.com"
@@ -123,13 +123,13 @@ order: 5
 </p>
 
 <div class="sgds-example-others">
-    <div class="field">
-        <label class="label" for=input-4">Email Address</label>
-        <span class="hint">This is a example of hint text</span>
-        <span class="help is-success">This email is valid</span>
-        <div class="control">
+    <div class="sgds-field">
+        <label class="sgds-label" for=input-4">Email Address</label>
+        <span class="sgds-hint">This is a example of hint text</span>
+        <span class="sgds-help is-success">This email is valid</span>
+        <div class="sgds-control">
             <input
-            class="input is-success"
+            class="sgds-input is-success"
             type="email"
             placeholder="Email input"
             value="hello@example.com"
@@ -141,13 +141,13 @@ order: 5
 </div>
 
 {%- highlight html -%}
-<div class="field">
-  <label class="label" for=input-4">Email Address</label>
-  <span class="hint">This is a example of hint text</span>
-  <span class="help is-success">This email is valid</span>
-  <div class="control">
+<div class="sgds-field">
+  <label class="sgds-label" for=input-4">Email Address</label>
+  <span class="sgds-hint">This is a example of hint text</span>
+  <span class="sgds-help is-success">This email is valid</span>
+  <div class="sgds-control">
       <input
-      class="input is-success"
+      class="sgds-input is-success"
       type="email"
       placeholder="Email input"
       value="hello@example.com"
