--- a/collections/_general/accordion.html
+++ b/collections/_general/accordion.html
@@ -84,7 +84,7 @@ js: true
 <hr/>
 
 <h3>Style</h3>
-<table class="table">
+<table class="sgds-table">
     <thead>
     <tr>
         <th>Modifier</th>
