--- a/collections/_general/button.html
+++ b/collections/_general/button.html
@@ -112,17 +112,17 @@ icon: button
 <li>You can attach controls together with the <code>has-addons</code> modifier.</li>
 
 <div class="sgds-example-others">
-    <div class="field has-addons">
-        <div class="control"><button class="sgds-button">Yes</button></div>
-        <div class="control"><button class="sgds-button">Maybe</button></div>
-        <div class="control"><button class="sgds-button">No</button></div>
+    <div class="sgds-field has-addons">
+        <div class="sgds-control"><button class="sgds-button">Yes</button></div>
+        <div class="sgds-control"><button class="sgds-button">Maybe</button></div>
+        <div class="sgds-control"><button class="sgds-button">No</button></div>
     </div>
 </div>
 {%- highlight html -%}
-<div class="field has-addons">
-    <div class="control"><button class="sgds-button">Yes</button></div>
-    <div class="control"><button class="sgds-button">Maybe</button></div>
-    <div class="control"><button class="sgds-button">No</button></div>
+<div class="sgds-field has-addons">
+    <div class="sgds-control"><button class="sgds-button">Yes</button></div>
+    <div class="sgds-control"><button class="sgds-button">Maybe</button></div>
+    <div class="sgds-control"><button class="sgds-button">No</button></div>
 </div>
 {%- endhighlight -%}
 
@@ -187,7 +187,7 @@ icon: button
 <hr/>
 
 <h3>Style</h3>
-<table class="table">
+<table class="sgds-table">
     <thead>
     <tr>
         <th>Modifier</th>
