--- a/collections/_general/card.html
+++ b/collections/_general/card.html
@@ -160,7 +160,7 @@ icon: card
 
 <div class="sgds-example-others">
     <row>
-        <div class="col is-4">
+        <div class="sgds-col is-4">
             {{ card_mix_content }}
         </div>
     </row>
@@ -183,11 +183,11 @@ icon: card
   headers for titles or footers for interactions.
 </p>
 <div class="sgds-example-others">
-    <div class="row">
-        <div class="col is-4">
+    <div class="sgds-row">
+        <div class="sgds-col is-4">
             {{ card_with_footer }}
         </div>
-        <div class="col is-4">
+        <div class="sgds-col is-4">
             {{ card_grid_example }}
         </div>
     </div>
@@ -215,8 +215,8 @@ icon: card
 </p>
 
 <div class="sgds-example-others">
-    <div class="row">
-        <div class="col is-4">
+    <div class="sgds-row">
+        <div class="sgds-col is-4">
             {{interactive_card}}
         </div>
     </div>
@@ -238,14 +238,14 @@ icon: card
   in a grid of columns and rows.
 </p>
 <div class="sgds-example-others">
-    <div class="row">
-        <div class="col is-4">
+    <div class="sgds-row">
+        <div class="sgds-col is-4">
             {{media_card_default}}
         </div>
-        <div class="col is-4">
+        <div class="sgds-col is-4">
             {{media_card_primary}}
         </div>
-        <div class="col is-4">
+        <div class="sgds-col is-4">
             {{media_card_secondary}}
         </div>
     </div>
@@ -261,7 +261,7 @@ icon: card
 <hr/>
 
 <h3>Style</h3>
-<table class="table">
+<table class="sgds-table">
     <thead>
         <tr>
             <th>Modifier</th>
