--- a/collections/_general/form.html
+++ b/collections/_general/form.html
@@ -15,45 +15,45 @@ published: false
 
 <p>A quick example of how a common feedback form will look like</p>
 
-<div class="field">
-    <label class="label" for="name">Name</label>
-    <div class="control">
-        <input class="input" type="text" placeholder="Text input" id="name" />
+<div class="sgds-field">
+    <label class="sgds-label" for="name">Name</label>
+    <div class="sgds-control">
+        <input class="sgds-input" type="text" placeholder="Text input" id="name" />
     </div>
 </div>
 
-<div class="field">
-    <label class="label" for="username">Username</label>
-    <div class="control">
+<div class="sgds-field">
+    <label class="sgds-label" for="username">Username</label>
+    <div class="sgds-control">
         <input
-            class="input is-success"
+            class="sgds-input is-success"
             type="text"
             placeholder="Text input"
             value="Username"
             id="username"
         />
     </div>
-    <p class="help is-success">This username is available</p>
+    <p class="sgds-help is-success">This username is available</p>
 </div>
 
-<div class="field">
-    <label class="label" for="email">Email</label>
-    <div class="control">
+<div class="sgds-field">
+    <label class="sgds-label" for="email">Email</label>
+    <div class="sgds-control">
         <input
-            class="input is-danger"
+            class="sgds-input is-danger"
             type="email"
             placeholder="Email input"
             value="hello@example.com"
             id="email"
         />
     </div>
-    <p class="help is-danger">This email is invalid</p>
+    <p class="sgds-help is-danger">This email is invalid</p>
 </div>
 
-<div class="field">
-    <label class="label" for="select-example">Subject</label>
-    <div class="control">
-        <div class="select" id="select-example">
+<div class="sgds-field">
+    <label class="sgds-label" for="select-example">Subject</label>
+    <div class="sgds-control">
+        <div class="sgds-select" id="select-example">
             <select>
                 <option>Select dropdown</option>
                 <option>With options</option>
@@ -62,49 +62,49 @@ published: false
     </div>
 </div>
 
-<div class="field">
-    <label class="label" for="message">Message</label>
-    <div class="control">
-        <textarea class="textarea" placeholder="Textarea" id="message"></textarea>
+<div class="sgds-field">
+    <label class="sgds-label" for="message">Message</label>
+    <div class="sgds-control">
+        <textarea class="sgds-textarea" placeholder="Textarea" id="message"></textarea>
     </div>
 </div>
 
-<div class="field">
-    <div class="control">
-        <label class="checkbox">
+<div class="sgds-field">
+    <div class="sgds-control">
+        <label class="sgds-checkbox">
             <input type="checkbox" />
             I agree to the <a href="#">terms and conditions</a>
         </label>
     </div>
 </div>
 
-<div class="field">
-    <div class="control">
-        <label class="radio">
+<div class="sgds-field">
+    <div class="sgds-control">
+        <label class="sgds-radio">
             <input type="radio" name="question" />
             Yes
         </label>
-        <label class="radio">
+        <label class="sgds-radio">
             <input type="radio" name="question" />
             No
         </label>
     </div>
 </div>
 
-<div class="field is-grouped">
-    <div class="control">
+<div class="sgds-field is-grouped">
+    <div class="sgds-control">
         <button class="sgds-button is-link">Submit</button>
     </div>
-    <div class="control">
+    <div class="sgds-control">
         <button class="sgds-button is-text">Cancel</button>
     </div>
 </div>
 
-<div class="field has-addons">
-    <div class="control">
-        <input class="input" type="text" placeholder="Find a repository" />
+<div class="sgds-field has-addons">
+    <div class="sgds-control">
+        <input class="sgds-input" type="text" placeholder="Find a repository" />
     </div>
-    <div class="control">
+    <div class="sgds-control">
         <a class="sgds-button is-info">
             Search
         </a>
@@ -116,45 +116,45 @@ published: false
 <h5 class="has-text-weight-semibold">Usage</h5>
 
 {%- highlight html -%}
-<div class="field">
-    <label class="label" for="name">Name</label>
-    <div class="control">
-        <input class="input" type="text" placeholder="Text input" id="name" />
+<div class="sgds-field">
+    <label class="sgds-label" for="name">Name</label>
+    <div class="sgds-control">
+        <input class="sgds-input" type="text" placeholder="Text input" id="name" />
     </div>
 </div>
 
-<div class="field">
-    <label class="label" for="username">Username</label>
-    <div class="control">
+<div class="sgds-field">
+    <label class="sgds-label" for="username">Username</label>
+    <div class="sgds-control">
         <input
-            class="input is-success"
+            class="sgds-input is-success"
             type="text"
             placeholder="Text input"
             value="Username"
             id="username"
         />
     </div>
-    <p class="help is-success">This username is available</p>
+    <p class="sgds-help is-success">This username is available</p>
 </div>
 
-<div class="field">
-    <label class="label" for="email">Email</label>
-    <div class="control">
+<div class="sgds-field">
+    <label class="sgds-label" for="email">Email</label>
+    <div class="sgds-control">
         <input
-            class="input is-danger"
+            class="sgds-input is-danger"
             type="email"
             placeholder="Email input"
             value="hello@example.com"
             id="email"
         />
     </div>
-    <p class="help is-danger">This email is invalid</p>
+    <p class="sgds-help is-danger">This email is invalid</p>
 </div>
 
-<div class="field">
-    <label class="label" for="select-example">Subject</label>
-    <div class="control">
-        <div class="select" id="select-example">
+<div class="sgds-field">
+    <label class="sgds-label" for="select-example">Subject</label>
+    <div class="sgds-control">
+        <div class="sgds-select" id="select-example">
             <select>
                 <option>Select dropdown</option>
                 <option>With options</option>
@@ -163,49 +163,49 @@ published: false
     </div>
 </div>
 
-<div class="field">
-    <label class="label" for="message">Message</label>
-    <div class="control">
-        <textarea class="textarea" placeholder="Textarea" id="message"></textarea>
+<div class="sgds-field">
+    <label class="sgds-label" for="message">Message</label>
+    <div class="sgds-control">
+        <textarea class="sgds-textarea" placeholder="Textarea" id="message"></textarea>
     </div>
 </div>
 
-<div class="field">
-    <div class="control">
-        <label class="checkbox">
+<div class="sgds-field">
+    <div class="sgds-control">
+        <label class="sgds-checkbox">
             <input type="checkbox" />
             I agree to the <a href="#">terms and conditions</a>
         </label>
     </div>
 </div>
 
-<div class="field">
-    <div class="control">
-        <label class="radio">
+<div class="sgds-field">
+    <div class="sgds-control">
+        <label class="sgds-radio">
             <input type="radio" name="question" />
             Yes
         </label>
-        <label class="radio">
+        <label class="sgds-radio">
             <input type="radio" name="question" />
             No
         </label>
     </div>
 </div>
 
-<div class="field is-grouped">
-    <div class="control">
+<div class="sgds-field is-grouped">
+    <div class="sgds-control">
         <button class="sgds-button is-link">Submit</button>
     </div>
-    <div class="control">
+    <div class="sgds-control">
         <button class="sgds-button is-text">Cancel</button>
     </div>
 </div>
 
-<div class="field has-addons">
-    <div class="control">
-        <input class="input" type="text" placeholder="Find a repository" />
+<div class="sgds-field has-addons">
+    <div class="sgds-control">
+        <input class="sgds-input" type="text" placeholder="Find a repository" />
     </div>
-    <div class="control">
+    <div class="sgds-control">
         <a class="sgds-button is-info">
             Search
         </a>
