--- a/collections/_general/modal.html
+++ b/collections/_general/modal.html
@@ -114,7 +114,7 @@ category: General
 <hr />
 
 <h3>Style</h3>
-<table class="table">
+<table class="sgds-table">
     <thead>
     <tr>
         <th>Modifier</th>
