--- a/collections/_general/table.html
+++ b/collections/_general/table.html
@@ -13,7 +13,7 @@ icon: table
 <h2>Types</h2>
 <h3>1) Default Table</h3>
 
-<table class="table">
+<table class="sgds-table">
     <thead>
         <tr>
             <th>Header Field A</th>
@@ -39,7 +39,7 @@ icon: table
 <p>You only need to attach a single <code>table</code> CSS class within the table tag.</p>
 
 {%- highlight html -%}
-<table class="table">
+<table class="sgds-table">
     <thead>
         <tr>
             <th>Header Field A</th>
@@ -78,7 +78,7 @@ icon: table
     > class
 </p>
 <!--Add class name table-h for horizontal tables-->
-<table class="table table-h">
+<table class="sgds-table table-h">
     <tbody>
         <tr>
             <th>Lorem ipsum dolor.</th>
@@ -102,7 +102,7 @@ icon: table
 </table>
 {%- highlight html -%}
 <!--Add class name table-h for horizontal tables-->
-<table class="table table-h">
+<table class="sgds-table table-h">
     <tbody>
         <tr>
             <th>Lorem ipsum dolor.</td>
@@ -137,7 +137,7 @@ icon: table
 <h3>3) Vertical Header Table</h3>
 <p>You can use this table with left header header. Just add the <code>.table-v</code> class.</p>
 <!--Add class name table-v for horizontal tables-->
-<table class="table table-v">
+<table class="sgds-table table-v">
     <tr>
         <td>Lorem ipsum dolor.</td>
         <td>Lorem ipsum dolor.</td>
@@ -159,7 +159,7 @@ icon: table
 </table>
 {%- highlight html -%}
 <!--Add class name table-v for horizontal tables-->
-<table class="table table-v">
+<table class="sgds-table table-v">
     <tr>
         <td>Lorem ipsum dolor.</td>
         <td>Lorem ipsum dolor.</td>
@@ -190,7 +190,7 @@ icon: table
 <hr />
 
 <h3>Style</h3>
-<table class="table">
+<table class="sgds-table">
     <thead>
         <tr>
             <th>Modifier</th>
