--- a/collections/_general/tooltip.html
+++ b/collections/_general/tooltip.html
@@ -18,8 +18,8 @@ icon: circle-question
     Position your tooltip using the
     <code>sgds-tooltip is-tooltip-*position*</code> class.
 </p>
-<div class="row is-multiline">
-    <div class="col is-6 has-text-centered">
+<div class="sgds-row is-multiline">
+    <div class="sgds-col is-6 has-text-centered">
         <button
             href="!#"
             type="button"
@@ -29,7 +29,7 @@ icon: circle-question
             Default tooltip
         </button>
     </div>
-    <div class="col is-6 has-text-centered">
+    <div class="sgds-col is-6 has-text-centered">
         <button
             href="!#"
             type="button"
@@ -39,7 +39,7 @@ icon: circle-question
             Right tooltip
         </button>
     </div>
-    <div class="col is-6 has-text-centered">
+    <div class="sgds-col is-6 has-text-centered">
         <button
             href="!#"
             type="button"
@@ -49,7 +49,7 @@ icon: circle-question
             Bottom tooltip
         </button>
     </div>
-    <div class="col is-6 has-text-centered">
+    <div class="sgds-col is-6 has-text-centered">
         <button
             href="!#"
             type="button"
@@ -111,8 +111,8 @@ icon: circle-question
     Assign colours to your tooltip using the
     <code>sgds-tooltip is-tooltip-*stateColor*</code> class.
 </p>
-<div class="row">
-    <div class="col">
+<div class="sgds-row">
+    <div class="sgds-col">
         <div class="sgds-buttons">
             <button
                 href="!#"
