--- a/collections/_general/typography.html
+++ b/collections/_general/typography.html
@@ -20,7 +20,7 @@ order: 1 # For some reason mobile-nav sorts this page to first naturally. Overri
   <a href="https://fonts.google.com/?query=Lato" target="_blank">Lato</a> as its
   main typeface. Lato is an open source font provided by Google.
 </p>
-<table class="table">
+<table class="sgds-table">
   <thead>
     <tr>
       <th>rem</th>
@@ -125,8 +125,8 @@ order: 1 # For some reason mobile-nav sorts this page to first naturally. Overri
 
 <p>Align text with 4 alignment helper classes</p>
 
-<div class="row">
-  <div class="col">
+<div class="sgds-row">
+  <div class="sgds-col">
     <table class="sgds-table is-bordered is-narrow">
         <thead>
             <tr>
@@ -174,8 +174,8 @@ order: 1 # For some reason mobile-nav sorts this page to first naturally. Overri
 <h3>CSS Text Transform</h3>
 <p>Transform text with the use of one of 4 text transformation helpers</p>
 
-<div class="row">
-  <div class="col">
+<div class="sgds-row">
+  <div class="sgds-col">
     <table class="sgds-table is-bordered is-narrow">
       <thead>
             <tr>
