--- a/collections/_helpers/display.html
+++ b/collections/_helpers/display.html
@@ -11,7 +11,7 @@ layout: layout-docs
 <hr/>
 
 <h3>Element height in vh units</h3>
-<table class="table is-bordered">
+<table class="sgds-table is-bordered">
   <thead>
     <tr>
       <td>Class</td>
@@ -32,7 +32,7 @@ layout: layout-docs
 
 <h3>Margin and padding</h3>
 <p>Replace <code>margin</code> with <code>padding</code> in the table below to control padding.</p>
-<table class="table">
+<table class="sgds-table">
   <thead>
     <tr>
       <td>Class</td>
@@ -92,7 +92,7 @@ layout: layout-docs
 </ul>
 
 <h4>Example on how <code>is-flex</code> works:</h4>
-<table class="table is-bordered is-size-8 margin--top--sm">
+<table class="sgds-table is-bordered is-size-8 margin--top--sm">
   <thead>
     <tr>
       <td width="20%">Class</td>
@@ -181,7 +181,7 @@ layout: layout-docs
 
 <h4>Helper classes to display element for different screensizes</h4>
 
-<table class="table is-bordered is-size-8 margin--top--sm">
+<table class="sgds-table is-bordered is-size-8 margin--top--sm">
   <thead>
     <tr>
       <td width="20%">Class</td>
@@ -296,7 +296,7 @@ layout: layout-docs
 
 <h4>Hiding content for different displays</h4>
 
-<table class="table is-bordered is-size-8 margin--top--sm">
+<table class="sgds-table is-bordered is-size-8 margin--top--sm">
   <thead>
     <tr>
       <td width="20%">Class</td>
@@ -385,7 +385,7 @@ layout: layout-docs
 
 <h4>Helper classes to hide element for different screensizes</h4>
 
-<table class="table is-bordered is-size-8 margin--top--sm">
+<table class="sgds-table is-bordered is-size-8 margin--top--sm">
   <thead>
     <tr>
       <td width="20%">Class</td>
