--- a/collections/_patterns/date.html
+++ b/collections/_patterns/date.html
@@ -26,15 +26,15 @@ layout: layout-docs
 {% capture date %}
 <p>
     Please enter your date of birth
-    <span class="hint">E.g 01 01 1990</span>
+    <span class="sgds-hint">E.g 01 01 1990</span>
 </p>
-<div class="row">
-    <div class="col is-3-mobile is-2-desktop">
-        <div class="field">
-            <label class="label" for="dob-day">Day</label>
-            <div class="control">
+<div class="sgds-row">
+    <div class="sgds-col is-3-mobile is-2-desktop">
+        <div class="sgds-field">
+            <label class="sgds-label" for="dob-day">Day</label>
+            <div class="sgds-control">
                 <input
-                    class="input"
+                    class="sgds-input"
                     type="text"
                     id="dob-day"
                     name="dob-day"
@@ -46,12 +46,12 @@ layout: layout-docs
         </div>
     </div>
 
-    <div class="col is-3-mobile is-2-desktop">
-        <div class="field">
-            <label class="label" for="dob-month">Month</label>
-            <div class="control">
+    <div class="sgds-col is-3-mobile is-2-desktop">
+        <div class="sgds-field">
+            <label class="sgds-label" for="dob-month">Month</label>
+            <div class="sgds-control">
                 <input
-                    class="input"
+                    class="sgds-input"
                     type="text"
                     id="dob-month"
                     name="dob-month"
@@ -63,12 +63,12 @@ layout: layout-docs
         </div>
     </div>
 
-    <div class="col is-3-mobile is-3-desktop">
-        <div class="field">
-            <label class="label" for="dob-year">Year</label>
-            <div class="control">
+    <div class="sgds-col is-3-mobile is-3-desktop">
+        <div class="sgds-field">
+            <label class="sgds-label" for="dob-year">Year</label>
+            <div class="sgds-control">
                 <input
-                    class="input"
+                    class="sgds-input"
                     type="text"
                     id="dob-year"
                     name="dob-year"
