--- a/collections/_patterns/email-address.html
+++ b/collections/_patterns/email-address.html
@@ -21,12 +21,12 @@ layout: layout-docs
 </p>
 
 <div class="sgds-example-others">
-<div class="field">
-    <label class="label" for="email">Email Address</label>
-    <span class="hint">Your email would be used for announcements</span>
-    <div class="control">
+<div class="sgds-field">
+    <label class="sgds-label" for="email">Email Address</label>
+    <span class="sgds-hint">Your email would be used for announcements</span>
+    <div class="sgds-control">
         <input
-            class="input margin--bottom--lg col is-6"
+            class="sgds-input margin--bottom--lg col is-6"
             id="email"
             name="email"
             type="email"
@@ -39,12 +39,12 @@ layout: layout-docs
 </div>
 
 {%- highlight html -%}
-<div class="field">
-    <label class="label" for="email">Email Address</label>
-    <span class="hint">Your email would be used for announcements</span>
-    <div class="control">
+<div class="sgds-field">
+    <label class="sgds-label" for="email">Email Address</label>
+    <span class="sgds-hint">Your email would be used for announcements</span>
+    <div class="sgds-control">
         <input
-            class="input margin--bottom--lg col is-4"
+            class="sgds-input margin--bottom--lg col is-4"
             id="email"
             name="email"
             type="email"
