--- a/collections/_patterns/names.html
+++ b/collections/_patterns/names.html
@@ -3,11 +3,11 @@ title: Names
 layout: layout-docs
 ---
 {% capture general_name_field %}
-<div class="field">
-    <label class="label" for="name">Full Name</label>
-    <div class="control">
+<div class="sgds-field">
+    <label class="sgds-label" for="name">Full Name</label>
+    <div class="sgds-control">
         <input
-            class="input col is-8"
+            class="sgds-input col is-8"
             type="text"
             id="name"
             name="name"
@@ -20,11 +20,11 @@ layout: layout-docs
 {% endcapture %}
 
 {% capture multiple_name_field %}
-<div class="field">
-    <label class="label" for="given-name">Given Name</label>
-    <div class="control">
+<div class="sgds-field">
+    <label class="sgds-label" for="given-name">Given Name</label>
+    <div class="sgds-control">
         <input
-            class="input col is-8"
+            class="sgds-input col is-8"
             type="text"
             id="given-name"
             name="given-name"
@@ -34,11 +34,11 @@ layout: layout-docs
         />
     </div>
 </div>
-<div class="field margin--top--lg">
-    <label class="label" for="family-name">Family Name</label>
-    <div class="control">
+<div class="sgds-field margin--top--lg">
+    <label class="sgds-label" for="family-name">Family Name</label>
+    <div class="sgds-control">
         <input
-            class="input col is-8"
+            class="sgds-input col is-8"
             type="text"
             id="family-name"
             name="family-name"
