--- a/collections/_patterns/overview.html
+++ b/collections/_patterns/overview.html
@@ -29,6 +29,6 @@ redirect_from:
 <p>
   Explore some of our design patterns that you’ll need.
 </p>
-<div class="row is-multiline is-mobile">
+<div class="sgds-row is-multiline is-mobile">
     {% include component-list.html collectionName='patterns' %}
 </div>
