--- a/collections/_standard/footer.html
+++ b/collections/_standard/footer.html
@@ -9,13 +9,13 @@ order: 4
 <footer class='sgds-footer'>
     <div class="top-section">
         <div class="sgds-container is-fluid">
-            <div class="row">
-                <div class="col">
+            <div class="sgds-row">
+                <div class="sgds-col">
                     <h5 class="has-text-white"><b>{{site.title}}</b></h5>
                 </div>
             </div>
-            <div class="row">
-                <div class="col is-right-desktop-only">
+            <div class="sgds-row">
+                <div class="sgds-col is-right-desktop-only">
                     <ul>
                         <li class="is-inline-block-desktop-only">
                             <p><a href="" target="_blank">Contact</a></p>
@@ -30,8 +30,8 @@ order: 4
     </div>
     <div class="bottom-section">
         <div class="sgds-container is-fluid">
-            <div class="row is-multiline">
-                <div class="col is-12">
+            <div class="sgds-row is-multiline">
+                <div class="sgds-col is-12">
                     <ul>
                         <li>
                             <a href="{{site.report_vulnerability}}" target="_blank">Report Vulnerability</a>
@@ -40,7 +40,7 @@ order: 4
                         <li><a href="">Terms of Use</a></li>
                     </ul>
                 </div>
-                <div class="col is-12 has-text-right-desktop has-text-right-tablet has-text-left-mobile">
+                <div class="sgds-col is-12 has-text-right-desktop has-text-right-tablet has-text-left-mobile">
                     <p class="is-hidden-touch"> © {{ site.time | date: "%Y" }} Government of Singapore. Last Updated
                         {{site.time | date_to_string -}}</p>
                     <p class="is-hidden-desktop">© {{ site.time | date: "%Y" }} Government of Singapore</p>
@@ -55,25 +55,25 @@ order: 4
 <footer class='sgds-footer'>
     <div class="top-section">
         <div class="sgds-container is-fluid">
-            <div class="row">
-                <div class="col">
+            <div class="sgds-row">
+                <div class="sgds-col">
                     <h5 class="has-text-white"><b>{{site.title}}</b></h5>
                 </div>
             </div>
-            <div class="row">
-                <div class="col is-3">
+            <div class="sgds-row">
+                <div class="sgds-col is-3">
                     <p class="has-text-white"><b>Category 1</b></p>
                     <p><a href="">Link</a></p>
                     <p><a href="">Link</a></p>
                 </div>
-                <div class="col is-3">
+                <div class="sgds-col is-3">
                     <p class="has-text-white"><b>Category 2</b></p>
                     <p><a href="">Link</a></p>
                     <p><a href="">Link</a></p>
                 </div>
             </div>
-            <div class="row">
-                <div class="col is-right-desktop-only">
+            <div class="sgds-row">
+                <div class="sgds-col is-right-desktop-only">
                     <ul>
                         <li class="is-inline-block-desktop-only">
                             <p><a href="" target="_blank">Contact</a></p>
@@ -88,8 +88,8 @@ order: 4
     </div>
     <div class="bottom-section">
         <div class="sgds-container is-fluid">
-            <div class="row is-multiline">
-                <div class="col is-12">
+            <div class="sgds-row is-multiline">
+                <div class="sgds-col is-12">
                     <ul>
                         <li>
                             <a href="{{site.report_vulnerability}}" target="_blank">Report Vulnerability</a>
@@ -98,7 +98,7 @@ order: 4
                         <li><a href="">Terms of Use</a></li>
                     </ul>
                 </div>
-                <div class="col is-12 has-text-right-desktop has-text-right-tablet has-text-left-mobile">
+                <div class="sgds-col is-12 has-text-right-desktop has-text-right-tablet has-text-left-mobile">
                     <p class="is-hidden-touch"> © {{ site.time | date: "%Y" }} Government of Singapore. Last Updated
                         {{site.time | date_to_string -}}</p>
                     <p class="is-hidden-desktop">© {{ site.time | date: "%Y" }} Government of Singapore</p>
@@ -113,19 +113,19 @@ order: 4
 <footer class='sgds-footer'>
     <div class="top-section">
         <div class="sgds-container is-fluid">
-            <div class="row">
-                <div class="col">
+            <div class="sgds-row">
+                <div class="sgds-col">
                     <h5 class="has-text-white"><b>{{site.title}}</b></h5>
                 </div>
             </div>
-            <div class="row">
-                <div class="col is-4">
+            <div class="sgds-row">
+                <div class="sgds-col is-4">
                     <p>Unites Singapore Government Digital Services around a common UI language and user experience
                     </p>
                 </div>
             </div>
-            <div class="row">
-                <div class="col is-right-desktop-only">
+            <div class="sgds-row">
+                <div class="sgds-col is-right-desktop-only">
                     <ul>
                         <li class="is-inline-block-desktop-only">
                             <p><a href="" target="_blank">Contact</a></p>
@@ -140,8 +140,8 @@ order: 4
     </div>
     <div class="bottom-section">
         <div class="sgds-container is-fluid">
-            <div class="row is-multiline">
-                <div class="col is-12">
+            <div class="sgds-row is-multiline">
+                <div class="sgds-col is-12">
                     <ul>
                         <li>
                             <a href="{{site.report_vulnerability}}" target="_blank">Report Vulnerability</a>
@@ -150,7 +150,7 @@ order: 4
                         <li><a href="">Terms of Use</a></li>
                     </ul>
                 </div>
-                <div class="col is-12 has-text-right-desktop has-text-right-tablet has-text-left-mobile">
+                <div class="sgds-col is-12 has-text-right-desktop has-text-right-tablet has-text-left-mobile">
                     <p class="is-hidden-touch"> © {{ site.time | date: "%Y" }} Government of Singapore. Last Updated
                         {{site.time | date_to_string -}}</p>
                     <p class="is-hidden-desktop">© {{ site.time | date: "%Y" }} Government of Singapore</p>
