--- a/collections/_standard/masthead.html
+++ b/collections/_standard/masthead.html
@@ -18,14 +18,14 @@ order: 1
 {% capture lang_selector_masthead %}
 <div class="sgds-masthead">
     <div class="sgds-container">
-        <div class="row is-mobile">
-            <div class="col is-9-desktop is-12-mobile is-flex">
+        <div class="sgds-row is-mobile">
+            <div class="sgds-col is-9-desktop is-12-mobile is-flex">
                 <a href="https://www.gov.sg" target="_blank">
                     <span class="sgds-icon sgds-icon-sg-crest"></span>
                     <span class="is-text">A Singapore Government Agency Website</span>
                 </a>
             </div>
-            <div class="col has-text-right is-hidden-mobile">
+            <div class="sgds-col has-text-right is-hidden-mobile">
                 <select class="language-selector" aria-label="language">
                     <option>English</option>
                     <option>中文</option>
