--- a/collections/_standard/side-nav.html
+++ b/collections/_standard/side-nav.html
@@ -70,8 +70,8 @@ order: 3
 
 <h4>1) Basic side navigation to support level 2 navigation.</h4>
 <div class="sgds-example-others">
-    <div class="row">
-        <div class="col is-3">{{lvl2_sidenav}}</div>
+    <div class="sgds-row">
+        <div class="sgds-col is-3">{{lvl2_sidenav}}</div>
     </div>
 </div>
 {%- highlight html -%}{{lvl2_sidenav}}{%- endhighlight -%}
@@ -86,8 +86,8 @@ order: 3
     <span class="sgds-tag is-rounded margin--left--sm">JS</span>
 </h4>
 <div class="sgds-example-others">
-    <div class="row">
-        <div class="col is-3">
+    <div class="sgds-row">
+        <div class="sgds-col is-3">
             {{lvl2_dropdown_sidenav}}
         </div>
     </div>
