--- a/contents/about/content-about.html
+++ b/contents/about/content-about.html
@@ -116,7 +116,7 @@ permalink: /about/
 <p>This concept is well-explained by Brad Frost through <a href="http://bradfrost.com/blog/post/atomic-web-design/"
         target="_blank">Atomic Design</a>
     from Brad Frost:</p>
-<table class="table">
+<table class="sgds-table">
     <tbody>
         <tr>
             <td><span class="sgds-icon sgds-icon-atom is-size-5"></span></td>
