--- a/collections/_form/checkbox.html
+++ b/collections/_form/checkbox.html
@@ -14,34 +14,34 @@ order: 2
 <h3>Default Checkboxes</h3>
 
 <div class="sgds-example-others">
-  <div class="field">
-    <div class="control">
+  <div class="sgds-field">
+    <div class="sgds-control">
       <input type="checkbox" id="checkbox-1" />
-      <label for="checkbox-1" class="checkbox" name="selected-features">Option 1</label>
+      <label for="checkbox-1" class="sgds-checkbox" name="selected-features">Option 1</label>
     </div>
-    <div class="control">
+    <div class="sgds-control">
       <input type="checkbox" id="checkbox-2" />
-      <label for="checkbox-2" class="checkbox" name="selected-features">Option 2</label>
+      <label for="checkbox-2" class="sgds-checkbox" name="selected-features">Option 2</label>
     </div>
-    <div class="control">
+    <div class="sgds-control">
       <input type="checkbox" id="checkbox-3" disabled />
-      <label for="checkbox-3" class="checkbox" name="selected-features" disabled>Option 3 - Disabled</label>
+      <label for="checkbox-3" class="sgds-checkbox" name="selected-features" disabled>Option 3 - Disabled</label>
     </div>
   </div>
 </div>
 
 {%- highlight html -%}
-<div class="control">
+<div class="sgds-control">
   <input type="checkbox" id="checkbox-1" />
-  <label for="checkbox-1" class="checkbox" name="selected-features">Option 1</label>
+  <label for="checkbox-1" class="sgds-checkbox" name="selected-features">Option 1</label>
 </div>
-<div class="control">
+<div class="sgds-control">
   <input type="checkbox" id="checkbox-2" />
-  <label for="checkbox-2" class="checkbox" name="selected-features">Option 2</label>
+  <label for="checkbox-2" class="sgds-checkbox" name="selected-features">Option 2</label>
 </div>
-<div class="control">
+<div class="sgds-control">
   <input type="checkbox" id="checkbox-3" disabled />
-  <label for="checkbox-3" class="checkbox" name="selected-features" disabled>Option 3 - Disabled</label>
+  <label for="checkbox-3" class="sgds-checkbox" name="selected-features" disabled>Option 3 - Disabled</label>
 </div>
 {%- endhighlight -%}
 <button
