--- a/collections/_general/hero.html
+++ b/collections/_general/hero.html
@@ -8,8 +8,8 @@ icon: hero
 {% capture default_hero %}
 <section class="sgds-hero has-background-primary">
     <div class="sgds-hero-body sgds-container is-fluid">
-        <div class="row is-vcentered has-text-centered">
-            <div class="col is-8 is-offset-2 has-text-white">
+        <div class="sgds-row is-vcentered has-text-centered">
+            <div class="sgds-col is-8 is-offset-2 has-text-white">
                 <h1 class="display"><b>design system</b></h1>
                 <h5 class="is-hidden-mobile">Unites Singapore Government Digital Services around a common UI language and user experience</h5>
             </div>
@@ -21,8 +21,8 @@ icon: hero
 {% capture dropdown_hero %}
 <section class="sgds-hero has-background-primary">
     <div class="sgds-hero-body sgds-container is-fluid">
-        <div class="row is-vcentered">
-            <div class="col is-8 is-offset-2 has-text-white has-text-centered">
+        <div class="sgds-row is-vcentered">
+            <div class="sgds-col is-8 is-offset-2 has-text-white has-text-centered">
                 <h1 class="display"><b>title</b></h1>
                 <h5 class="is-hidden-mobile">subtitle</h5>
                 <div class="sgds-dropdown is-fullwidth is-menu-centered">
@@ -53,8 +53,8 @@ icon: hero
 {% capture dropdown_hoverable_hero %}
 <section class="sgds-hero has-background-primary">
     <div class="sgds-hero-body sgds-container is-fluid">
-        <div class="row is-vcentered">
-            <div class="col is-8 is-offset-2 has-text-white has-text-centered">
+        <div class="sgds-row is-vcentered">
+            <div class="sgds-col is-8 is-offset-2 has-text-white has-text-centered">
                 <h1 class="display"><b>title</b></h1>
                 <h5 class="is-hidden-mobile">subtitle</h5>
                 <!--Dropdown button (sgds-dropdown) must include class name  is-fullwidth, is-menu-centered & is-hoverable-->
@@ -87,15 +87,15 @@ icon: hero
 {% capture search_bar_hero %}
 <section class="sgds-hero has-background-primary">
     <div class="sgds-hero-body sgds-container is-fluid">
-        <div class="row is-vcentered">
-            <div class="col is-8 is-offset-2 has-text-white has-text-centered">
+        <div class="sgds-row is-vcentered">
+            <div class="sgds-col is-8 is-offset-2 has-text-white has-text-centered">
                 <h1 class="display"><b>title</b></h1>
                 <h5 class="is-hidden-mobile">subtitle</h5>
-                <div class="field has-addons">
-                    <div class="control  is-expanded">
-                        <input class="input" type="text" placeholder="Find a repository">
+                <div class="sgds-field has-addons">
+                    <div class="sgds-control  is-expanded">
+                        <input class="sgds-input" type="text" placeholder="Find a repository">
                     </div>
-                    <div class="control">
+                    <div class="sgds-control">
                         <a class="sgds-button is-white is-outlined">
                             Search
                         </a>
