--- a/collections/_general/notification.html
+++ b/collections/_general/notification.html
@@ -125,7 +125,7 @@ icon: notification
 <hr />
 
 <h3>Style</h3>
-<table class="table">
+<table class="sgds-table">
     <thead>
         <tr>
             <th>Modifier</th>
