--- a/collections/_general/pagination.html
+++ b/collections/_general/pagination.html
@@ -162,7 +162,7 @@ icon: table
 <hr/>
 
 <h3>Style</h3>
-<table class="table">
+<table class="sgds-table">
     <thead>
         <tr>
             <th>Modifier</th>
