--- a/collections/_patterns/address.html
+++ b/collections/_patterns/address.html
@@ -21,10 +21,10 @@ layout: layout-docs
   the code needed to build this element.
 </p>
 {% capture address %}
-<div class="field">
-    <label class="label" for="postal-code">Postal Code</label>
-    <div class="control">
-        <input class="input col is-4"
+<div class="sgds-field">
+    <label class="sgds-label" for="postal-code">Postal Code</label>
+    <div class="sgds-control">
+        <input class="sgds-input col is-4"
         type="text"
         name="postal-code"
         id="postal-code"
@@ -33,11 +33,11 @@ layout: layout-docs
     <button class="sgds-button is-primary margin--top--sm">Find Address</button>
 </div>
 
-<div class="field margin--top--lg">
-    <label class="label" for="street-name">Block/Street Name</label>
-    <div class="control">
+<div class="sgds-field margin--top--lg">
+    <label class="sgds-label" for="street-name">Block/Street Name</label>
+    <div class="sgds-control">
         <input
-            class="input margin--bottom--lg col is-8"
+            class="sgds-input margin--bottom--lg col is-8"
             type="text"
             name="street-name"
             id="street-name"
@@ -46,22 +46,22 @@ layout: layout-docs
     </div>
 </div>
 
-<div class="field">
-    <label class="label" for="building-number">Building/House Number</label>
-    <span class="hint">If applicable</span>
-    <div class="control">
-        <input class="input margin--bottom--lg col is-4"
+<div class="sgds-field">
+    <label class="sgds-label" for="building-number">Building/House Number</label>
+    <span class="sgds-hint">If applicable</span>
+    <div class="sgds-control">
+        <input class="sgds-input margin--bottom--lg col is-4"
         type="text"
         name="building-number"
         id="building-number" />
     </div>
 </div>
 
-<div class="field">
-    <label class="label" for="unit-number">Unit Number</label>
-    <div class="control">
+<div class="sgds-field">
+    <label class="sgds-label" for="unit-number">Unit Number</label>
+    <div class="sgds-control">
         <input
-            class="input margin--bottom--lg col is-4"
+            class="sgds-input margin--bottom--lg col is-4"
             type="text"
             id="unit-number"
             name="unit-number"
