--- a/collections/_standard/main-nav.html
+++ b/collections/_standard/main-nav.html
@@ -117,8 +117,8 @@ order: 2
                 </a>
                 <div class="sgds-navbar-dropdown">
                     <div class="sgds-container is-fluid">
-                        <div class="row">
-                            <div class="col is-3">
+                        <div class="sgds-row">
+                            <div class="sgds-col is-3">
                                 <p class="sgds-navbar-item is-uppercase">
                                     <b>Sub Menu 1a</b>
                                 </p>
@@ -132,7 +132,7 @@ order: 2
                                     Sub Link 3
                                 </a>
                             </div>
-                            <div class="col is-3">
+                            <div class="sgds-col is-3">
                                 <p class="sgds-navbar-item is-uppercase">
                                     <b>Sub Menu 1b</b>
                                 </p>
@@ -146,7 +146,7 @@ order: 2
                                     Sub Link 3
                                 </a>
                             </div>
-                            <div class="col is-6">
+                            <div class="sgds-col is-6">
                                 <div class="sgds-navbar-item is-wrapped">
                                     <p>
                                         <b>Sub Menu 1 Info</b><br />
@@ -165,8 +165,8 @@ order: 2
                 </a>
                 <div class="sgds-navbar-dropdown">
                     <div class="sgds-container is-fluid">
-                        <div class="row is-multiline">
-                            <div class="col is-3">
+                        <div class="sgds-row is-multiline">
+                            <div class="sgds-col is-3">
                                 <p class="sgds-navbar-item is-uppercase">
                                     <b>Sub Menu 2a</b>
                                 </p>
@@ -180,7 +180,7 @@ order: 2
                                     Sub Link 3
                                 </a>
                             </div>
-                            <div class="col is-3">
+                            <div class="sgds-col is-3">
                                 <p class="sgds-navbar-item is-uppercase">
                                     <b>Sub Menu 2b</b>
                                 </p>
@@ -194,7 +194,7 @@ order: 2
                                     Sub Link 3
                                 </a>
                             </div>
-                            <div class="col">
+                            <div class="sgds-col">
                                 <div class="sgds-navbar-item is-wrapped">
                                     <p>
                                         <b>Sub Menu 2 Info</b><br />
@@ -228,9 +228,9 @@ order: 2
         <div class="sgds-navbar-start">
             <div class="sgds-navbar-item is-hidden-desktop">
                 <form>
-                    <div class="field has-addons">
-                        <div class="control is-expanded">
-                            <input class="input is-fullwidth" id="nav-4-search-mobile" type="text"
+                    <div class="sgds-field has-addons">
+                        <div class="sgds-control is-expanded">
+                            <input class="sgds-input is-fullwidth" id="nav-4-search-mobile" type="text"
                                 placeholder="{{ site.search_placeholder }}" name="nav-4-search-mobile"
                                 aria-label="search" />
                         </div>
@@ -255,20 +255,20 @@ order: 2
         </div>
     </div>
 </nav>
-<div class="row is-hidden-touch is-marginless hide" id="searchbar-1">
-    <div class="col">
+<div class="sgds-row is-hidden-touch is-marginless hide" id="searchbar-1">
+    <div class="sgds-col">
         <hr class="margin--bottom--sm" />
         <form>
-            <div class="field has-addons padding--sm">
-                <div class="control has-icons-left is-expanded padding--bottom--sm">
-                    <input class="input is-fullwidth is-borderless is-shadowless" id="nav-4-search" type="text"
+            <div class="sgds-field has-addons padding--sm">
+                <div class="sgds-control has-icons-left is-expanded padding--bottom--sm">
+                    <input class="sgds-input is-fullwidth is-borderless is-shadowless" id="nav-4-search" type="text"
                         placeholder="{{ site.search_placeholder }}" name="nav-4-search" autocomplete="off"
                         aria-label="search" />
                     <span class="icon is-left">
                         <i class="search-bar-icon sgds-icon sgds-icon-search is-size-7"></i>
                     </span>
                 </div>
-                <div class="control">
+                <div class="sgds-control">
                     <button type="button" class="sgds-button is-primary has-text-white padding--left padding--right">
                         SEARCH
                     </button>
