--- a/contents/general/content-coming-soon.html
+++ b/contents/general/content-coming-soon.html
@@ -8,8 +8,8 @@ breadcrumb: Discuss
 <section class="sgds-section">
     <div class="sgds-container">
         <div class="content">
-            <div class="row padding--bottom--lg">
-                <div class="col is-centered has-text-centered">
+            <div class="sgds-row padding--bottom--lg">
+                <div class="sgds-col is-centered has-text-centered">
                     <img src="/assets/img/img_construction.png" alt="" class="padding--bottom--lg">
                     <p class="has-text-weight-normal has-text-primary padding--bottom--lg is-size-4">
                         Our portal is still under construction, but we are ready to go!
