--- a/search/search.html
+++ b/search/search.html
@@ -6,18 +6,18 @@ breadcrumb: Search
 ---
 
 <form action="/search/" method="get">
-    <div class="row">
-        <div class="col">
-            <div class="field has-addons">
-                <div class="control is-expanded">
+    <div class="sgds-row">
+        <div class="sgds-col">
+            <div class="sgds-field has-addons">
+                <div class="sgds-control is-expanded">
                     <input
-                        class="input"
+                        class="sgds-input"
                         type="text"
                         placeholder="{{ site.search_placeholder }}"
                         name="search"
                     />
                 </div>
-                <div class="control">
+                <div class="sgds-control">
                     <button class="sgds-button">
                         Search
                     </button>
